# zstd-rs

./: .gitignore  Cargo.toml  Changelog.md  Readme.md  nohup.out  optimizations.md  optimizing_bit_reader.md  perf.data  perf.data.old  test_img.zst
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: decode_all.rs  reversedbitreader_bench.rs
cli/: Cargo.toml
cli/src/: main.rs  progress.rs
decodecorpus_files/: z000001  z000002  z000005  z000006  z000007  z000009  z000010  z000011  z000012.zst  z000013.zst  z000014  z000016.zst  z000017  z000018  z000018.zst  z000019  z000019.zst  z000020  z000021  z000022  z000023.zst  z000024  z000025.zst  z000026  z000028  z000029  z000031  z000032.zst  z000033  z000035  z000037  z000039.zst  z000041  z000042.zst  z000044  z000044.zst  z000045  z000046  z000046.zst  z000048  (+30 more)
dict_tests/files/: ModemManager.service.zst  NetworkManager-dispatcher.service  NetworkManager-wait-online.service  auditd.service  auditd.service.zst  avahi-daemon.service  avahi-daemon.service.zst  avahi-dnsconfd.service  avahi-dnsconfd.service.zst  canberra-system-bootup.service.zst  canberra-system-shutdown-reboot.service  canberra-system-shutdown-reboot.service.zst  colord.service  console-getty.service  container-getty@.service  container-getty@.service.zst  cpupower.service.zst  dbus-org.freedesktop.import1.service.zst  dbus-org.freedesktop.login1.service  dbus-org.freedesktop.portable1.service.zst  dbus.service.zst  debug-shell.service  debug-shell.service.zst  dhcpcd.service.zst  dhcpcd@.service.zst  dmraid.service.zst  dnsmasq.service.zst  e2scrub_all.service  e2scrub_all.service.zst  e2scrub_reap.service  ebtables.service.zst  emergency.service  fstrim.service  ftpd.service.zst  getty@.service  git-daemon@.service.zst  glustereventsd.service  glusterfssharedstorage.service  glusterfssharedstorage.service.zst  gpm.service.zst  (+124 more)
fuzz/: .gitignore  Cargo.toml
fuzz/artifacts/decode/: crash-285afb3e50455f20ba4f19ffdd3ca2767771d67c  crash-2ec60cbc7b68479802290177232e2472625d5e5d  crash-3151768e96e3ce234cc8304da8fa51c65ec2bfb6  crash-431e8c5fa22def362a489a04e4f9470d9409f111  crash-adb83ab8f58b2724f649a0cea5a5ed2004fa25c5  crash-bacc82e4bc4975593010cae0002c55d0967da6a3  crash-bbead0dbe38036346fb694ad1893cec85a0b8700  crash-c746b132a6561becc94bbaf80f0fcd22c805ae7e  crash-cb08bdd38c7904891e88d217fe105a0c7102cf46  crash-d7a5385da30608d3ea21916c0291e3592a627c48  crash-d8943dbbbf4f0a40fdaef7375207c7778b333864  crash-d95d11d3a0d91d39c1d5ba9added01f249b39b82  crash-f2c779cdf7827b4827e33eb5510e9e2d3d83371f
fuzz/artifacts/fse/: crash-16fdc285684fe17e4a84ff6605c7f0e362af3dfa  crash-e587fc04ebe1b7e97d0aa916ef8d3f2cc92fb4b1
fuzz/artifacts/fuzz_target_1/: crash-003e8871ae1b398af243ed3bdd895e6a9b417d09  crash-0b8dd1ec99c11d29f489b7ed1ea0a641b22f1c4b  crash-0e471543b70867a4e3d6884e281e504018f6a4e0  crash-2a4da82402386b074fd8be53271812ce2d8e2b18  crash-2f47b61c081dfbce296e9674cae4448f7bfa1277  crash-49bec46e6271a44740b1ab82e79e9b371d832b8c  (+33 more)
fuzz/fuzz_targets/: decode.rs  encode.rs  fse.rs  fuzz_target_1.rs  huff0.rs  interop.rs
fuzz_decodecorpus/: z000002.zst  z000003.zst  z000005.zst  z000009.zst  z000015.zst  z000017.zst  z000026.zst  z000035.zst  z000036.zst  z000038.zst  z000045.zst  z000051.zst  z000059.zst  z000062.zst  z000065.zst  z000073.zst  z000074.zst  z000077.zst  z000078.zst  z000079.zst  z000081.zst  z000087.zst  z000089.zst  z000093.zst  z000094.zst
ruzstd/: Cargo.toml
ruzstd/decodecorpus_files/: abc.txt  abc.txt.zst  z000000  z000000.zst  z000001.zst  z000003  z000004  z000004.zst  z000007.zst  z000008  z000010.zst  z000012  z000015  z000016  z000020.zst  z000022.zst  z000023  z000024.zst  z000025  z000027  z000028.zst  z000029.zst  z000030  z000030.zst  z000033.zst  z000034  z000034.zst  z000036  z000037.zst  z000038  z000039  z000040  z000040.zst  z000042  z000043  z000043.zst  z000047  z000047.zst  z000048.zst  z000049  (+40 more)
ruzstd/dict_tests/: dictionary
ruzstd/fuzz/: Cargo.toml
ruzstd/src/: lib.rs
ruzstd/src/decoding/: mod.rs  (+6 more)
src/: frame.rs  frame_decoder.rs  io.rs  io_nostd.rs  lib.rs  streaming_decoder.rs
src/bit_io/: bit_reader.rs
src/block/: block.rs  block_decoder.rs  literals_section.rs  literals_section_decoder.rs  mod.rs  sequence_section.rs  sequence_section_decoder.rs
src/blocks/: block.rs  literals_section.rs  sequence_section.rs
src/common/: mod.rs
src/decoding/: bit_reader.rs  bit_reader_reverse.rs  block_decoder.rs  decode_buffer.rs  decodebuffer.rs  dictionary.rs  errors.rs  frame.rs  frame_decoder.rs  fse.rs  huff0.rs  literals_section_decoder.rs  little_endian.rs  mod.rs  offset_history.rs  ringbuffer.rs  scratch.rs  sequence_execution.rs  sequence_section_decoder.rs  streaming_decoder.rs
src/dictionary/: cover.rs  frequency.rs  mod.rs  reader.rs  reservoir.rs
src/encoding/: bit_writer.rs  block_header.rs  frame_compressor.rs  frame_encoder.rs  frame_header.rs  match_generator.rs  mod.rs  skip_list.rs  util.rs
src/errors/: mod.rs
src/fse/: fse_decoder.rs  fse_encoder.rs  mod.rs
src/huff0/: huff0_decoder.rs  huff0_encoder.rs  mod.rs
src/io/: bit_reader.rs  bit_writer.rs
src/tests/: bit_reader.rs  decode_corpus.rs  dict_test.rs  encode_corpus.rs  fuzz_regressions.rs  mod.rs
(+235 files in other folders)
