[package]
name = "ruzstd"
version = "0.5.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/KillingSpark/zstd-rs"
repository = "https://github.com/KillingSpark/zstd-rs"
description = "A decoder for the zstd compression format"
exclude = ["decodecorpus_files/*", "dict_tests/*", "fuzz_decodecorpus/*"]
readme = "Readme.md"

[dependencies]
byteorder = { version = "1.5", default-features = false }
twox-hash = { version = "1.6", default-features = false }
derive_more = { version = "0.99", default-features = false, features = ["display", "from"] }

[dev-dependencies]
criterion = "0.3"
rand = {version = "0.8.5", features = ["small_rng"]}

[features]
default = ["std"]
std = ["derive_more/error"]

[[bench]]
name = "reversedbitreader_bench"
harness = false

[[bin]]
name = "zstd"
required-features = ["std"]

[[bin]]
name = "zstd_stream"
required-features = ["std"]
