[package]
name = "ruzstd"
version = "0.7.2"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/KillingSpark/zstd-rs"
repository = "https://github.com/KillingSpark/zstd-rs"
description = "A decoder for the zstd compression format"
exclude = ["decodecorpus_files/*", "dict_tests/*", "fuzz_decodecorpus/*"]
readme = "Readme.md"
keywords = ["zstd", "zstandard", "decompression"]
categories = ["compression"]

[dependencies]
twox-hash = { version = "1.6", default-features = false, optional = true }
hashbrown = { version = "0.15" }

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
compiler_builtins = { version = "0.1.2", optional = true }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[dev-dependencies]
criterion = "0.5"
rand = { version = "0.8.5", features = ["small_rng"] }
zstd = "0.13.2"

[features]
default = ["hash", "std"]
hash = ["dep:twox-hash"]
std = []

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
rustc-dep-of-std = ["dep:compiler_builtins", "dep:core", "dep:alloc"]

[[bench]]
name = "reversedbitreader_bench"
harness = false

[[bench]]
name = "decode_all"
harness = false

[[bin]]
name = "zstd"
required-features = ["std"]

[[bin]]
name = "zstd_stream"
required-features = ["std"]
