[package]
name = "ruzstd"
version = "0.8.1"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/KillingSpark/zstd-rs"
repository = "https://github.com/KillingSpark/zstd-rs"
description = "A decoder for the zstd compression format"
exclude = ["decodecorpus_files/*", "dict_tests/*", "fuzz_decodecorpus/*"]
readme = "Readme.md"
keywords = ["zstd", "zstandard", "decompression"]
categories = ["compression"]

[dependencies]
# Locked behind the `hash` feature flag
twox-hash = { version = "2.0", default-features = false, features = ["xxhash64"], optional = true }
# Used for the command line binary only
clap = { version = "4.5.46", features = ["derive"], optional = true }
color-eyre = { version = "0.6.5", optional = true }

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
compiler_builtins = { version = "0.1.2", optional = true }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[dev-dependencies]
criterion = "0.5"
rand = { version = "0.8.5", features = ["small_rng"] }
zstd = "0.13.2"

[features]
default = ["hash", "std"]
hash = ["dep:twox-hash"]
fuzz_exports = []
std = []
cli = ["dep:clap", "dep:color-eyre"]

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
rustc-dep-of-std = ["dep:compiler_builtins", "dep:core", "dep:alloc"]

[[bench]]
name = "decode_all"
harness = false

[[bin]]
name = "zstd"
required-features = ["std", "cli"]
